# eShow

./: .gitignore  API_USAGE.md  ARCHITECTURE.md  DATABASE_STRATEGY.md  DOCUMENTATION_UPDATE_SUMMARY.md  DOCUMENTATION_UPDATE_SUMMARY_SPACE_FESTIVAL.md  IMPLEMENTATION_SUMMARY.md  README.md  README_TESTES.md  SCRIPTS_README.md  SPACE_FESTIVAL_STATUS_CONSISTENCY_CHECK.md  SPACE_FESTIVAL_STATUS_IMPLEMENTATION.md  STATUS_CONSISTENCY_CHECK.md  STATUS_IMPLEMENTATION.md  TEST_COVERAGE_SUMMARY.md  VERSIONING.md  VERSION_UPDATE_SUMMARY_v0.15.0.md  alembic.ini  create_test_user.py  env.example  init_artist_types.py  init_artists.py  init_bookings.py  init_db.py  init_event_types.py  init_festival_types.py  init_financials.py  init_interests.py  init_musical_styles.py  init_profiles.py  init_reviews.py  init_roles.py  init_space_event_types.py  init_space_festival_types.py  init_space_types.py  init_spaces.py  init_users.py  migrate_to_postgres.py  pyproject.toml  pytest_integration.ini  (+14 more)
alembic/: __init__.py  env.py
app/: __init__.py  main.py
docs/: Análise do Endpoint Artist Musical Styles.md  Análise do Endpoint Artist Types.md  Análise do Endpoint Artists.md  Análise do Endpoint Auth.md  Análise do Endpoint Bookings.md  Análise do Endpoint Event Types.md  Análise do Endpoint Festival Types.md  Análise do Endpoint Financials.md  Análise do Endpoint Interests.md  Análise do Endpoint Location Search.md  Análise do Endpoint Musical Styles.md  Análise do Endpoint Profiles.md  Análise do Endpoint Reviews.md  Análise do Endpoint Roles.md  Análise do Endpoint Space Event Types.md  (+4 more)
(+211 files in other folders)
